Copied files from brewerry.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,18 @@
-dist
-cabal-dev
-*.o
-*.hi
-*.chi
-*.chs.h
-.virthualenv
+pom.xml
+pom.xml.asc
+*jar
+/lib/
+/classes/
+/target/
+/checkouts/
+.lein-deps-sum
+.lein-repl-history
+.lein-plugins/
+.lein-failures
+.nrepl-port
+.nrepl-history
+*~
+.cabal-sandbox/
+cabal.sandbox.config
+dist/
+TAGS
